# synthtypes

./: .gitignore  README.md  pyproject.toml
scripts/: explore_features.py  verify_oracle.py
synthtypes/data/: sampling.py
synthtypes/oracle/: classifier.py  generative.py
synthtypes/verification/: plots.py
tests/: test_generative.py
