[project]
name = "synthtypes"
version = "0.1.0"
description = "Controlled experiment on synthetic data hallucination detection with analytical oracle classification"
readme = "README.md"
authors = [
    { name = "Aleksandar Babic", email = "aleksandar.babic@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synthtypes"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
